@@ -1,7 +1,9 @@
 v4.14.1 ??? ??? 2012
+  - SIP_PYBUFFER can now be used to define objects that implement the Python
+    buffer protocol.
   - Added /Capsule/ typedef annotation.
   - Added the 'z' format character to sipBuildResult().
-  - Added the 'z' format character to sipParseResult().
+  - Added the 'z', '!' and '$' format characters to sipParseResult().
   - The C prototype foo(void) is now accepted.
   - sipdistutils.py will now include swig_opts if no sip_opts have been
     defined.
